--- a/caliopen/locale/en/LC_MESSAGES/caliopen.po
+++ b/caliopen/locale/en/LC_MESSAGES/caliopen.po
@@ -26,24 +26,31 @@ msgid ""
 "Un jour, Jérémie Zimmermann est passé par moi, pendant ses vacances, en "
 "pleine affaire PRISM."
 msgstr ""
+"One day, not long after Edward Snowden's revelations of NSA spying, "
+"Jérémie Zimmermann prompted me to revive a former project of mine, which "
+"had been abandoned in the darkness of Google's monolithic shadow."
 
 #: caliopen/templates/layout/about.jinja2:10
 msgid ""
 "Nous avons parlé, ce jour là, dun ancien projet de service de courrier "
 "électronique"
 msgstr ""
+"The world simply didn't see a need for a secure email service that "
+"respects its users' privacy. Caliop's time had come."
 
 #: caliopen/templates/layout/about.jinja2:11
 msgid ""
 "Depuis ce jour, avec une équipe réunie grâce au soutien sans faille de "
 "Gandi et de la Quadrature du Net, nous avons travaillé dur."
 msgstr ""
+"Since that day, our team, thanks to the unfaltering support of Gandi and "
+"Quadrature du Net, has been working very hard."
 
 #: caliopen/templates/layout/about.jinja2:22
 msgid ""
 "Notre objectif premier : redonner la possibilité au plus grand nombre de "
 "protéger sa vie privée en ligne."
-msgstr ""
+msgstr "We have been guided by the following principles."
 
 #: caliopen/templates/layout/about.jinja2:29
 msgid ""
@@ -61,47 +68,80 @@ msgstr ""
 
 #: caliopen/templates/layout/about.jinja2:46
 msgid "Title 1"
-msgstr ""
+msgstr "Caliop will be sustainable, secure, free, and open."
 
 #: caliopen/templates/layout/about.jinja2:47
 msgid ""
 "Nous devons créer un logiciel libre, que nimporte quel administrateur "
 "système puisse installer aussi facilement quun CMS."
 msgstr ""
+"We have to create a piece of software that any system administrator can "
+"install as easily as they would a CMS. We must ensure that each instance "
+"of our tool can interact with others in a secure way. And we must, at "
+"the same time, support standard protocols, in order to not limit our "
+"users' ability to connect others to our own networks. Also, the tool we "
+"create must be free and open, to protect users from any potential "
+"proprietary restrictions, and to let the availability of the source code "
+"be the guarantee of its security."
 
 #: caliopen/templates/layout/about.jinja2:48
 msgid "Nous devons créer plus quun outil : un écosystème."
 msgstr ""
+"To support the evolution of services based on our application, we need "
+"to create more than just a tool: we need an ecosystem."
 
 #: caliopen/templates/layout/about.jinja2:51
 msgid "Title 2"
-msgstr ""
+msgstr "Caliop will be decentralized."
 
 #: caliopen/templates/layout/about.jinja2:52
 msgid ""
 "Nous avons imaginé une association, qui donnera un label aux services qui"
 " le demanderont."
 msgstr ""
+"We therefore plan to create an association to certify providers choosing "
+"to offer services based on Caliop, and which will ensure Caliop's "
+"continued development. We therefore plan to create an association to "
+"certify services based on Caliop, and which will ensure Caliop's "
+"continued development. The certification, along with an SSL certificate, "
+"will allow private exchanges within an ecosystem.  Services choosing to "
+"use our tool will, in exchange, guarantee to the end user the respect of "
+"a charter forbidding the usage of their private data for commercial "
+"purposes."
 
 #: caliopen/templates/layout/about.jinja2:55
 msgid "Title 3"
-msgstr ""
+msgstr "Caliop will promote privacy."
 
 #: caliopen/templates/layout/about.jinja2:56
 msgid ""
 "Notre interface utilisateur affiche à chaque instant le niveau de "
 "confidentialité des échanges affichés"
 msgstr ""
+"A visual indicator of the level of confidentiality of a given "
+"interaction will be visible on Caliop's interface at all times. This "
+"will reflect not only the user's own protective measures, but also those "
+"of their correspondents and the servers between them."
 
 #: caliopen/templates/layout/about.jinja2:57
 msgid ""
 "En connaissant le niveau global de confidentialité de ses contacts, un "
 "utilisateur peut décider daccorder plus de confiance à tel ou untel"
 msgstr ""
+"By knowing the global level of her contacts' trustworthiness, a user can "
+"make an educated decision about whom to entrust with her correspondence, "
+"allowing her to favor those correspondents with a higher security level, "
+"and encouraging others to themselves use better security in their "
+"communications."
+"To this end, a user can, for example, choose to only display the least "
+"important exchanges when she is using a device that does not meet her "
+"standards for security (or the standards of those with whom she is "
+"communicating); otherwise her level of trustworthiness will drop, and "
+"she will be considered a riskier contact to others."
 
 #: caliopen/templates/layout/about.jinja2:60
 msgid "Title 4"
-msgstr ""
+msgstr "Caliop will help push for encryption."
 
 #: caliopen/templates/layout/about.jinja2:61
 msgid ""
@@ -109,22 +149,34 @@ msgid ""
 "créer une motivation suffisamment forte pour que les utilisateurs de "
 "notre solution"
 msgstr ""
+"We believe it is possible, using the power of social interaction, to "
+"create a strong enough incentive for users to get into the habit of "
+"constantly improving the security of their communications."
 
 #: caliopen/templates/layout/about.jinja2:62
 msgid ""
 "Et la longue histoire du logiciel libre nous la appris à la dure : il ne "
 "suffit pas de proposer un outil équivalent à ce qui existe déjà."
 msgstr ""
+"The long history of free software has taught us the hard way: it's not "
+"enough to duplicate existing tools. Most users possess neither the "
+"desire nor the courage to change email addresses, even to protect their "
+"privacy."
 
 #: caliopen/templates/layout/about.jinja2:65
 msgid "Title 5"
-msgstr ""
+msgstr "Caliop will be different."
 
 #: caliopen/templates/layout/about.jinja2:66
 msgid ""
 "Nous avons la chance, à la différence des opérateurs déjà présents, de "
 "partir dune feuille blanche."
 msgstr ""
+"But we, unlike existing operators, have the chance to start from scratch. "
+"We have no fear of scaring users away by offering them a drastically "
+"transformed interface, more adapted to the world in which we live today, "
+"where our private exchanges aren't restricted to e-mail but are "
+"transmitted via SMS, IRC, Twitter, WebRTC..."
 
 #: caliopen/templates/layout/contact.jinja2:8
 msgid "Aujourd'hui, nous avons besoin d'aide."
