--- a/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
+++ b/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: caliopen-website 0.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2014-05-16 15:48+0200\n"
-"PO-Revision-Date: 2014-05-16 16:39+0100\n"
+"POT-Creation-Date: 2014-05-16 17:12+0200\n"
+"PO-Revision-Date: 2014-05-16 17:13+0100\n"
 "Last-Translator: Vincent MINEAUD <vincent@gandi.net>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -126,6 +126,14 @@ msgstr "octopus Github"
 #: caliopen_website/templates/layout/contact.jinja2:25
 msgid "Envoyer un email"
 msgstr "Envoyer un email"
+
+#: caliopen_website/templates/layout/contact.jinja2:26
+msgid "contact@caliopen.org"
+msgstr "contact@caliopen.org"
+
+#: caliopen_website/templates/layout/contact.jinja2:26
+msgid "Contacter l'équipe CaliOpen"
+msgstr "Contacter l'équipe CaliOpen"
 
 #: caliopen_website/templates/layout/contact.jinja2:26
 msgid "enveloppe"
