--- a/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
+++ b/caliopen_website/locale/fr/LC_MESSAGES/caliopen_website.po
@@ -356,7 +356,7 @@ msgstr "Pourquoi ce projet ? À quoi ça sert ? En quoi est-ce différent de tou
 #: caliopen_website/templates/layout/tour.jinja2:56
 #: caliopen_website/templates/layout/tour.jinja2:60
 msgid "Lire"
-msgstr "<br/>Lire"
+msgstr "Lire"
 
 #: caliopen_website/templates/layout/tour.jinja2:56
 msgid "De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie."
